tests/baselines/reference/parserSkippedTokens16.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(1,6): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(1,12): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(2,22): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(3,3): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(6,5): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(8,14): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(1,1): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(1,8): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts(2,10): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.ts (9 errors) ====
    foo(): Bar { }
         ~
!!! error TS1005: ';' expected.
               ~
!!! error TS1005: ';' expected.
    ~~~
!!! error TS2304: Cannot find name 'foo'.
           ~~~
!!! error TS2304: Cannot find name 'Bar'.
    function Foo      () #   { }
                         
!!! error TS1127: Invalid character.
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    4+:5
      ~
!!! error TS1109: Expression expected.
    module M {
    function a(
        : T) { }
        ~
!!! error TS1138: Parameter declaration expected.
    }
    var x       =
                 
!!! error TS1109: Expression expected.